update the pattern of archive and tag

--- a/archives.html
+++ b/archives.html
@@ -1,9 +1,9 @@
 ---
-layout: page
+layout: archives
+title: Archives
 permalink: /archives/
 ---
 
-<h2>Archives</h2>
 <ul>
   {% for post in site.posts %}
 
