--- a/404.html
+++ b/404.html
@@ -1,1 +1,1 @@
-<p>我们真的找不到你要的页面，还是回到<a href={{site.url}}>首页</a>吧</p>
+<p class="panel-cover__description">我们找不到你要的页面，还是回到<a href="../index">首页</a>吧</p>
