alternate project introduction

--- a/projects.html
+++ b/projects.html
@@ -23,3 +23,9 @@ permalink: /projects/
   </a>
 </h3>
 <p>极简易python3解释器，只包括面向过程语法，无标准库</p>
+<h3>
+  <a href="https://github.com/linusboyle/Viminal">
+  Viminal
+  </a>
+</h3>
+<p>个人使用与收集的Vimscript集合</p>
